--- a/proyectoJava/guru-app/pom.xml
+++ b/proyectoJava/guru-app/pom.xml
@@ -16,9 +16,15 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <mysql.version>8.0.26</mysql.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql.version}</version>
+    </dependency>
      <!--<dependency>
      <groupId>junit</groupId>
       <artifactId>junit</artifactId>
