--- a/proyectoJava/proyecto-maven/webapp/pom.xml
+++ b/proyectoJava/proyecto-maven/webapp/pom.xml
@@ -13,11 +13,11 @@
   <name>webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
-    <dependency>
+    <!--<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
 </project>
