--- a/proyectoJava/proyecto-maven/pom.xml
+++ b/proyectoJava/proyecto-maven/pom.xml
@@ -8,7 +8,7 @@
 
   <name>proyecto-maven</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.inforhomex.org</url>
 
   <packaging>pom</packaging>
 
@@ -16,15 +16,21 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <slf4j.version>2.0.0-alpha0</slf4j.version>
   </properties>
 
   <dependencies>
-    <!--<dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>-->
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-simple</artifactId>
+    	<version>${slf4j.version}</version>
+    	<scope>runtime</scope>
+    	</dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>${slf4j.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -45,6 +51,16 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
+
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <configuration>
+                <mainClass>org.curso.maven.App</mainClass>
+            </configuration>
+        </plugin>
+
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
@@ -73,10 +89,23 @@
       </plugins>
     </pluginManagement>
   </build>
-<modules>
-    <module>core</module>
-  <module>service</module>
-  <module>weapp</module>
-  <module>webapp</module>
-  </modules>
+
+
+<profiles>
+    <profile>
+      <modules>
+        <module>core</module>
+        <module>service</module>
+        <module>weapp</module>
+        <module>webapp</module>
+        </modules>
+    </profile>
+</profiles>
+
+
+
+
+
+
+
 </project>
