--- a/proyectoJava/proyecto-maven/service/pom.xml
+++ b/proyectoJava/proyecto-maven/service/pom.xml
@@ -11,13 +11,20 @@
   <artifactId>service</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>service</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging> 
+  <url>http://www.inforhomex.org</url>
+
   <dependencies>
-    <!--<dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>-->
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-simple</artifactId>
+    	<version>${slf4j.version}</version>
+    	<scope>runtime</scope>
+    	</dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-api</artifactId>
+    	<version>${slf4j.version}</version>
+    </dependency>
   </dependencies>
 </project>
