--- a/proyectoJava/guru-app/pom.xml
+++ b/proyectoJava/guru-app/pom.xml
@@ -10,7 +10,7 @@
 
   <name>guru-app</name>
   <!-- FIXME change it to the project's website -->
-  <url>https://www.inforhomex.org</url>
+  <url>http://www.inforhomex.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,12 +25,6 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
     </dependency>
-     <!--<dependency>
-     <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>-->
   </dependencies>
 
   <build>
