--- a/proyectoJava/auditor-app/pom.xml
+++ b/proyectoJava/auditor-app/pom.xml
@@ -10,7 +10,7 @@
 
   <name>auditor-app</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>http://www.inforhomex.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,12 +19,7 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+    
   </dependencies>
 
   <build>
