--- a/proyectoJava/guru-app/pom.xml
+++ b/proyectoJava/guru-app/pom.xml
@@ -16,7 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
-    <mysql.version>8.0.26</mysql.version>
+    <mysql.version>5.1.26</mysql.version>
   </properties>
 
   <dependencies>
@@ -24,6 +24,8 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql.version}</version>
+      <type>jar</type>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
