--- a/proyectoJava/auditor-app/pom.xml
+++ b/proyectoJava/auditor-app/pom.xml
@@ -19,7 +19,26 @@
   </properties>
 
   <dependencies>
-    
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20220924</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.9.1</version>
+  </dependency>
+
+
   </dependencies>
 
   <build>
@@ -79,11 +98,6 @@
           </executions>
           <configuration>
             <mainClass>com.curso.java.App</mainClass>
-            <!--<arguments>
-            </arguments>
-            <systemProperties>
-             <systemPrperty></systemPrperty>
-            </systemProperties>-->
           </configuration>
         </plugin>
        <!-- Ejecutable fin-->
