--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
