--- a/proyectoJava/auditor-app/pom.xml
+++ b/proyectoJava/auditor-app/pom.xml
@@ -37,6 +37,24 @@
       <artifactId>gson</artifactId>
       <version>2.9.1</version>
   </dependency>
+  
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.13.4.2</version>
+  </dependency>
+
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-core</artifactId>
+    <version>2.13.4</version>
+</dependency>
+
+<!--<dependency>
+  <groupId>javax.json</groupId>
+  <artifactId>javax.json-api</artifactId>
+  <version>1.1.4</version>
+</dependency>-->
 
 
   </dependencies>
